<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dialer.view.activity.EditContactActivity">

    <item
        android:id="@+id/action_boot_info"
        android:orderInCategory="100"
        android:title="@string/boot_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/update_text"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/go_back_text"
        app:showAsAction="never" />
</menu>