<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="br.com.android.pocapp.view.activities.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_sw"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintHorizontal_bias="0.511" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email_text"
        android:inputType="textPersonName"
        android:textColor="#fff"
        android:textColorHighlight="#fff"
        android:textColorHint="#fff"
        android:textColorLink="#fff"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:shadowColor="#fff"
        android:textColorHighlight="#fff"
        android:textColorLink="#fff"
        android:hint="@string/pass_text"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="14dp"
        android:background="@color/colorAccent"
        android:text="@string/button_login_text"
        android:textColor="#fff"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:gravity="center_horizontal"
        android:text="@string/new_user_text"
        android:textColor="#fff"
        app:layout_constraintRight_toLeftOf="@+id/textView8"
        android:layout_marginRight="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/button"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register_text"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/button"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/button"
        android:layout_marginRight="32dp"
        android:onClick="RegisterNewUser"
        app:layout_constraintVertical_bias="0.529"
        android:layout_marginEnd="32dp" />

</android.support.constraint.ConstraintLayout>
